# fruit-tide

./: Cargo.toml  README.md
src/: main.rs  test.rs
src/controllers/: fruit.rs  mod.rs  views.rs
src/handlers/: fruit.rs  mod.rs
static/css/: custom.css
static/js/: api.js
templates/: form.html  index.html  layout.html
